# marshmallow

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
cmd/knowledgemanager/: main.go
cmd/stores/bleve/: main.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ArticleRow.tsx  ChatPanel.tsx  CreateKBDialog.tsx  FileUploadZone.tsx  KBDetail.tsx  KBList.tsx  MentionInput.tsx  SearchPanel.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx
frontend/src/hooks/: useFileUpload.ts
frontend/src/lib/: api.ts  storage.ts  utils.ts
frontend/src/types/: index.ts
lancedb_service/: main.py  redis.py  test.py
pkg/bleve/: article.go  bleve.go
pkg/config/: config.go
pkg/db/: db.go  sqlite.go
pkg/llm/: conversation.go  get_systemPrompt.go  system_prompt.txt  tools.go
pkg/models/: articles.go  index.go  knowledgebase.go  sessions.go
pkg/queue/: queue.go  redis.go
pkg/routes/: add_chat_message.go  create_knowledgebase.go  create_session.go  delete_article.go  get_all_sessions.go  get_article_details.go  get_knowledgebases.go  get_session.go  index_article.go  router.go  search.go
pkg/search/: search.go
pkg/storage/: gcs.go  storage.go
pkg/utils/: generate_name.go  pdf.go
samples/: config.yaml
